--- a/apps/example/src/App.css
+++ b/apps/example/src/App.css
@@ -7,17 +7,29 @@
   height: 100vh;
   padding: 50px;
 }
+
 .canvas-wrapper {
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+  box-sizing: border-box;
   width: 100%;
-  height: 500px;
+  /* height: 800px; */
   border-radius: 4px;
+}
+
+#canvas {
+  box-sizing: border-box;
+  width: 100%;
+  height: 400px;
   border: 2px solid lightblue;
   background: rgba(lightblue, 0.1);
 }
-#canvas {
+
+#canvas2 {
+  box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  height: 400px;
+  border: 2px solid red;
+  background: rgba(red, 0.1)
 }
